oxref (2.00.00)

  * Reorganized the internal data, using an unordered_map in Store

  * Added documentation/README.setup describing the program's flow

  * Added option --simplify to use a file containing simplified type
    definitions. 

WIP



oxref (1.00.06)

  * Updated entries in the 'required' file.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 20 Dec 2015 13:02:43 +0100

oxref (1.00.05)

  * Updated the icmake build scripts to icmake 8.00.04

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 14 Dec 2015 14:18:32 +0100

oxref (1.00.04)

  * Kevin Brodsky observed that the installation scripts used 'chdir' rather
    than 'cd'. Fixed in this release.

  * Kevin Brodsky also observed that the combined size of all precompiled 
    headers might exceed some disks capacities. The option -P was added to the
    ./build script to prevent the use of precompiled headers.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 05 Oct 2015 21:11:58 +0200

oxref (1.00.03)

  * Standardized the (de)installation procedures

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 03 Oct 2015 11:11:25 +0200

oxref (1.00.02)

  * Fixed compilation errors that emerged with g++-5, reported by Matthias
    Klose. 

  * Added the file 'required' to the source distribution summarizing the
    required software for building oxref.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Thu, 12 Feb 2015 18:13:30 +0100

oxref (1.00.01)

  * Since oxref's been around for over a year without encountering any
    serious problems, its version was bumped to slightly over 1.00.

  * Oxref no longer depends on bobcat's A2x and X2a classes

  * Oxref's no longer uses (deprecated) FBB::Errno exceptions. Instead,
    FBB::Exception exceptions are now used.

  * 'build oxref' uses the newly built tmp/bin/binary (= oxref) program to
    create its cross-reference listing.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Thu, 26 Dec 2013 12:33:38 +0100
  
oxref (0.91.00)
