@@ -36,7 +36,7 @@ class Store
     typedef SymbolMap::iterator MapIterator;
 
     SymbolMap d_symbolMap;
-    
+    bool d_noData;                          // used with calltree()    
 
     public:
         Store();
@@ -49,6 +49,10 @@ class Store
         void setObject(std::string const &object);
 
         void undefined(std::string const &symbol);
+
+        void calltree(size_t idx, size_t nestLevel) const;
+
+        bool find(size_t *idxPtr, std::string const &startSymbol) const;
 
     private:
         void define(std::string const &symbol, bool isFunction);
