@@ -2,8 +2,7 @@
 
 XrefData::XrefData(string const &symbol)
 :
-    d_refName(symbol),
-    d_isFunction(false)         // actually: not yet known
+    d_refName(symbol)
 {
     init();
 }
